# dengueboard

./: .gitignore  README.md  index.html  pyproject.toml
.github/workflows/: main.yml
data_processed/: dashboard_data.json
docs/: index.html
scripts/: update_data.py
src/dengueboard/: core.py
tests/: test_core.py
